CSS changes to fix mobile scaling issue.
Elements overlapping on mobiles.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1162,3 +1162,18 @@
       width: 100%;
     }
   }
+
+  #score_board {
+    width: 100%;
+    height: 50px;
+    display: inline-block;
+    vertical-align: top; /* here */
+    top: 0;
+    left: 0;
+    background-color: #198754;
+    margin: 0;
+  }
+
+  #score_board h1 {
+    margin: 0;
+  }
